crates/fakeable_impl/tests/snapshots/output_verification__fakeable_on_impl_with_async_generates_expected_code.snap
---
source: sources/dev/crates/fakeable/fakeable_impl/tests/output_verification.rs
expression: "prettyplease::unparse(&result_file)"
---
impl __fakeable__MyService::MyService {
    pub fn sync_method(&self) -> String {
        "sync result".to_string()
    }
    pub async fn async_method(
        &self,
        value: i32,
    ) -> Result<String, Box<dyn std::error::Error>> {
        Ok(format!("async result: {}", value))
    }
    pub async fn async_method_unit(&self) {
        println!("async method unit");
    }
}
impl MyService {
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn sync_method(&self) -> String {
        match &self.inner {
            __fakeable__MyService::Enum::Real(real) => real.sync_method(),
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(fake) => fake.sync_method(),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub async fn async_method(
        &self,
        value: i32,
    ) -> Result<String, Box<dyn std::error::Error>> {
        match &self.inner {
            __fakeable__MyService::Enum::Real(real) => real.async_method(value).await,
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(fake) => fake.async_method(value).await,
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub async fn async_method_unit(&self) {
        match &self.inner {
            __fakeable__MyService::Enum::Real(real) => real.async_method_unit().await,
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(fake) => fake.async_method_unit().await,
        }
    }
}
